# WALL-E

./: README.md
LLM_talker/: CMakeLists.txt  package.xml
LLM_talker/launch/: llm_publisher.py
LLM_talker/scripts/: llm_publisher.py
helios_control/: CMakeLists.txt  package.xml
helios_control/launch/: helios_control.launch.py
helios_control/scripts/: robot_control.py
helios_description/: CMakeLists.txt  package.xml
helios_description/launch/: spawn_helios.py  spawn_helios_launch.launch.py
helios_description/robot/: helios.urdf
helios_gazebo/: CMakeLists.txt  package.xml
helios_gazebo/launch/: helios_launch.py  start_world_launch.py
helios_gazebo/worlds/archives/: yolo_test.world
helios_recognition/: CMakeLists.txt  package.xml
helios_recognition/launch/: launch_yolov8.launch.py
helios_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
yolov8_msgs/: package.xml
